--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>88-Key Piano Keyboard</title>
-    <link rel="stylesheet" href="piano-styles.css" />
+    <link rel="stylesheet" href="css/piano-styles.css" />
   </head>
   <body>
     <h1 style="text-align: center; margin-bottom: 20px">
@@ -23,6 +23,6 @@
     <div class="piano-container">
       <div class="keyboard" id="keyboard"></div>
     </div>
-    <script src="piano.js"></script>
+    <script src="js/piano.js"></script>
   </body>
 </html>
