--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/piano-styles.css" />
   </head>
   <body>
-    <label for="middleC" style="color: white; margin-bottom: 10px">
+    <label for="middleC" class="middle-c-label">
       Middle C Label:
       <select id="middleC">
         <option value="C3" selected>C3 (Kawai VPC1,Yamaha, Logic)</option>
