--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>88-Key Piano Keyboard</title>
+    <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/piano-styles.css" />
   </head>
   <body>
