--- a/index.html
+++ b/index.html
@@ -32,16 +32,27 @@
         </section>
       </section>
 
-      <!-- Piano Section -->
       <section class="piano-wrapper">
-        <label for="middleC" class="middle-c-label">
-          Middle C Label:
-          <select id="middleC">
-            <option value="C3" selected>C3 (Kawai VPC1, Yamaha, Logic)</option>
-            <option value="C4">C4 (General MIDI)</option>
-            <option value="C5">C5 (Notation, FL Studio)</option>
-          </select>
-        </label>
+        <div class="piano-controls">
+          <label>
+            <input type="checkbox" id="toggleCOnly" />
+            Show only C notes
+          </label>
+          <label>
+            <input type="checkbox" id="toggleAllLabels" />
+            Hide all note labels
+          </label>
+          <label class="middle-c-label">
+            <span>Middle C Label:</span>
+            <select id="middleC">
+              <option value="C3" selected>
+                C3 (Kawai VPC1, Yamaha, Logic)
+              </option>
+              <option value="C4">C4 (General MIDI)</option>
+              <option value="C5">C5 (Notation, FL Studio)</option>
+            </select>
+          </label>
+        </div>
 
         <div class="piano-container">
           <div class="keyboard" id="keyboard"></div>
