fixed tab groups css, turtles all the way down

--- a/index.html
+++ b/index.html
@@ -13,26 +13,25 @@
 
     <main>
       <!-- Top Tab Group -->
-      <section class="tab-group">
-        <section class="tab-group top-tabs">
-          <div class="tab-nav">
-            <button class="tab-btn active" data-tab="1">Tab 1</button>
-            <button class="tab-btn" data-tab="2">Tab 2</button>
-            <button class="tab-btn" data-tab="3">Tab 3</button>
-            <button class="tab-btn" data-tab="4">Tab 4</button>
-            <button class="tab-btn" data-tab="5">Tab 5</button>
-            <button class="tab-btn" data-tab="6">Midi Info</button>
-          </div>
 
-          <div class="tab-content" data-tab="1">Content for Tab 1</div>
-          <div class="tab-content hidden" data-tab="2">Content for Tab 2</div>
-          <div class="tab-content hidden" data-tab="3">Content for Tab 3</div>
-          <div class="tab-content hidden" data-tab="4">Content for Tab 4</div>
-          <div class="tab-content hidden" data-tab="5">Content for Tab 5</div>
-          <div class="tab-content hidden" data-tab="6">
-            <div id="midonika-container" class="midonika-wrap"></div>
-          </div>
-        </section>
+      <section class="tab-group top-tabs">
+        <div class="tab-nav">
+          <button class="tab-btn active" data-tab="1">Chord Display</button>
+          <button class="tab-btn" data-tab="2">Tab 2</button>
+          <button class="tab-btn" data-tab="3">Tab 3</button>
+          <button class="tab-btn" data-tab="4">Tab 4</button>
+          <button class="tab-btn" data-tab="5">Tab 5</button>
+          <button class="tab-btn" data-tab="6">Midi Info</button>
+        </div>
+
+        <div class="tab-content" data-tab="1">Content for Tab 1</div>
+        <div class="tab-content hidden" data-tab="2">Content for Tab 2</div>
+        <div class="tab-content hidden" data-tab="3">Content for Tab 3</div>
+        <div class="tab-content hidden" data-tab="4">Content for Tab 4</div>
+        <div class="tab-content hidden" data-tab="5">Content for Tab 5</div>
+        <div class="tab-content hidden" data-tab="6">
+          <div id="midonika-container" class="midonika-wrap"></div>
+        </div>
       </section>
 
       <section class="piano-wrapper">
@@ -69,24 +68,23 @@
       </section>
 
       <!-- Bottom Tab Group -->
-      <section class="tab-group">
-        <section class="tab-group bottom-tabs">
-          <div class="tab-nav">
-            <button class="tab-btn" data-tab="b1">Tab 1</button>
-            <button class="tab-btn" data-tab="b2">Tab 2</button>
-            <button class="tab-btn" data-tab="b3">Tab 3</button>
-            <button class="tab-btn" data-tab="b4">Tab 4</button>
-            <button class="tab-btn" data-tab="b5">Tab 5</button>
-            <button class="tab-btn" data-tab="b6">Tab 6</button>
-          </div>
 
-          <div class="tab-content hidden" data-tab="b1">Content for Tab 1</div>
-          <div class="tab-content hidden" data-tab="b2">Content for Tab 2</div>
-          <div class="tab-content hidden" data-tab="b3">Content for Tab 3</div>
-          <div class="tab-content hidden" data-tab="b4">Content for Tab 4</div>
-          <div class="tab-content hidden" data-tab="b5">Content for Tab 5</div>
-          <div class="tab-content hidden" data-tab="b6">Content for Tab 6</div>
-        </section>
+      <section class="tab-group bottom-tabs">
+        <div class="tab-nav">
+          <button class="tab-btn" data-tab="b1">Tab 1</button>
+          <button class="tab-btn" data-tab="b2">Tab 2</button>
+          <button class="tab-btn" data-tab="b3">Tab 3</button>
+          <button class="tab-btn" data-tab="b4">Tab 4</button>
+          <button class="tab-btn" data-tab="b5">Tab 5</button>
+          <button class="tab-btn" data-tab="b6">Tab 6</button>
+        </div>
+
+        <div class="tab-content hidden" data-tab="b1">Content for Tab 1</div>
+        <div class="tab-content hidden" data-tab="b2">Content for Tab 2</div>
+        <div class="tab-content hidden" data-tab="b3">Content for Tab 3</div>
+        <div class="tab-content hidden" data-tab="b4">Content for Tab 4</div>
+        <div class="tab-content hidden" data-tab="b5">Content for Tab 5</div>
+        <div class="tab-content hidden" data-tab="b6">Content for Tab 6</div>
       </section>
     </main>
 
