--- a/index.html
+++ b/index.html
@@ -35,12 +35,10 @@
       </section>
 
       <section class="piano-wrapper">
-        <label
-          for="midiDeviceSelector"
-          style="display: block; margin-bottom: 4px; font-weight: bold"
-          >🎛 Select MIDI Input:</label
-        >
-        <select id="midiDeviceSelector" style="margin-bottom: 16px"></select>
+        <div class="midi-device-label">
+          <label for="midiDeviceSelector">🎛 Select MIDI Input:</label>
+          <select id="midiDeviceSelector"></select>
+        </div>
         <div class="piano-controls">
           <label>
             <input type="checkbox" id="toggleCOnly" />
