chord selector and display, css needs fixing

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/piano-styles.css" />
     <link rel="stylesheet" href="css/midonika.css" />
     <link rel="stylesheet" href="css/chord-display.css" />
+      <link rel="stylesheet" href="css/zoomed-keyboard.css" />
   </head>
   <body>
     <header>Tonika I</header>
@@ -25,16 +26,18 @@
           <button class="tab-btn" data-tab="6">Midi Info</button>
         </div>
 
-        <div class="tab-content" data-tab="1">
-          <div id="chord-display"></div>
-        </div>
-        <div class="tab-content hidden" data-tab="2">Content for Tab 2</div>
-        <div class="tab-content hidden" data-tab="3">Content for Tab 3</div>
-        <div class="tab-content hidden" data-tab="4">Content for Tab 4</div>
-        <div class="tab-content hidden" data-tab="5">Content for Tab 5</div>
-        <div class="tab-content hidden" data-tab="6">
-          <div id="midonika-container" class="midonika-wrap"></div>
-        </div>
+          <div class="tab-content" data-tab="1">
+              <div id="chord-selector-container"></div>
+              <div id="chord-display"></div>
+              <div id="zoomed-keyboard-container"></div>
+          </div>
+          <div class="tab-content hidden" data-tab="2">Content for Tab 2</div>
+          <div class="tab-content hidden" data-tab="3">Content for Tab 3</div>
+          <div class="tab-content hidden" data-tab="4">Content for Tab 4</div>
+          <div class="tab-content hidden" data-tab="5">Content for Tab 5</div>
+          <div class="tab-content hidden" data-tab="6">
+              <div id="midonika-container" class="midonika-wrap"></div>
+          </div>
       </section>
 
       <section class="piano-wrapper">
@@ -101,79 +104,105 @@
     <script src="js/midi-api-bridge.js"></script>
     <script src="js/chord-analyzer.js"></script>
     <script src="js/chord-display.js"></script>
+    <script src="js/chord-selector.js"></script>
+    <script src="js/zoomed-keyboard.js"></script>
 
     <script>
-      let midonikaApp = null;
-      let _chordSetupDone = false;
+        let midonikaApp = null;
+        let _chordSetupDone = false;
 
-      // Function to set up chord detection
-      function setupChordDetection() {
-        if (_chordSetupDone) return; // Prevent duplicate setup
-        _chordSetupDone = true;
+        // Make these global for debugging
+        window.chordSelector = null;
+        window.zoomedKeyboard = null;
 
-        const chordAnalyzer = new ChordAnalyzer();
-        const chordDisplay = new ChordDisplay("#chord-display");
+        // Function to set up chord detection
+        function setupChordDetection() {
+            if (_chordSetupDone) return; // Prevent duplicate setup
+            _chordSetupDone = true;
 
-        // Hook directly into the existing piano interface
-        const originalNoteOn = window.PianoInterface.noteOn;
-        const originalNoteOff = window.PianoInterface.noteOff;
+            const chordAnalyzer = new ChordAnalyzer();
+            const chordDisplay = new ChordDisplay("#chord-display");
 
-        let activeNotes = new Set();
+            // Initialize chord selector and zoomed keyboard
+            window.chordSelector = new ChordSelector("#chord-selector-container");
+            window.zoomedKeyboard = new ZoomedKeyboard("#zoomed-keyboard-container");
 
-        // Override noteOn to add chord analysis
-        window.PianoInterface.noteOn = function (midiNote) {
-          // Call original function first (keeps piano working)
-          originalNoteOn.call(this, midiNote);
+            // Connect chord selector to zoomed keyboard
+            window.chordSelector.setChordSelectedCallback((chord) => {
+                window.zoomedKeyboard.displayChord(chord);
+            });
 
-          // Add to active notes and analyze
-          activeNotes.add(midiNote);
-          analyzeCurrentChord();
-        };
+            // Update zoomed keyboard when Middle C mapping changes
+            const middleCSelect = document.querySelector('#middleC');
+            if (middleCSelect) {
+                middleCSelect.addEventListener('change', (e) => {
+                    window.zoomedKeyboard.updateMiddleCMapping(e.target.value);
+                });
+                // Set initial mapping
+                window.zoomedKeyboard.updateMiddleCMapping(middleCSelect.value);
+            }
 
-        // Override noteOff to update chord analysis
-        window.PianoInterface.noteOff = function (midiNote) {
-          // Call original function first (keeps piano working)
-          originalNoteOff.call(this, midiNote);
+            // Hook directly into the existing piano interface
+            const originalNoteOn = window.PianoInterface.noteOn;
+            const originalNoteOff = window.PianoInterface.noteOff;
 
-          // Remove from active notes and re-analyze
-          activeNotes.delete(midiNote);
-          analyzeCurrentChord();
-        };
+            let activeNotes = new Set();
 
-        function analyzeCurrentChord() {
-          if (activeNotes.size >= 2) {
-            const chord = chordAnalyzer.analyzeNotes(
-              Array.from(activeNotes),
-            );
-            console.log("🎵 Chord detected:", chord);
-            chordDisplay.updateChord(chord);
-          } else {
-            chordDisplay.clearDisplay();
-          }
+            // Override noteOn to add chord analysis
+            window.PianoInterface.noteOn = function (midiNote) {
+                // Call original function first (keeps piano working)
+                originalNoteOn.call(this, midiNote);
+
+                // Add to active notes and analyze
+                activeNotes.add(midiNote);
+                analyzeCurrentChord();
+            };
+
+            // Override noteOff to update chord analysis
+            window.PianoInterface.noteOff = function (midiNote) {
+                // Call original function first (keeps piano working)
+                originalNoteOff.call(this, midiNote);
+
+                // Remove from active notes and re-analyze
+                activeNotes.delete(midiNote);
+                analyzeCurrentChord();
+            };
+
+            function analyzeCurrentChord() {
+                if (activeNotes.size >= 2) {
+                    const chord = chordAnalyzer.analyzeNotes(
+                        Array.from(activeNotes),
+                    );
+                    console.log("🎵 Chord detected:", chord);
+                    chordDisplay.updateChord(chord);
+                } else {
+                    chordDisplay.clearDisplay();
+                }
+            }
+
+            console.log("✅ Chord analysis connected to piano interface");
+            console.log("✅ Chord selector and zoomed keyboard initialized");
         }
 
-        console.log("✅ Chord analysis connected to piano interface");
-      }
+        // 🎹 Launch Midonika immediately so it's ready for all tabs
+        window.addEventListener("DOMContentLoaded", () => {
+            midonikaApp = Midonika.createMidonika("#midonika-container");
 
-      // 🎹 Launch Midonika immediately so it's ready for all tabs
-      window.addEventListener("DOMContentLoaded", () => {
-        midonikaApp = Midonika.createMidonika("#midonika-container");
+            // Set up chord detection immediately since Tab 1 is active by default
+            setupChordDetection();
 
-        // Set up chord detection immediately since Tab 1 is active by default
-        setupChordDetection();
+            // 🧠 Tab switch handler
+            document.querySelectorAll(".tab-btn").forEach((btn) => {
+                btn.addEventListener("click", () => {
+                    const tabId = btn.dataset.tab;
 
-        // 🧠 Tab switch handler
-        document.querySelectorAll(".tab-btn").forEach((btn) => {
-          btn.addEventListener("click", () => {
-            const tabId = btn.dataset.tab;
-
-            // If switching to Tab 1, ensure chord detection is set up
-            if (tabId === "1") {
-              setupChordDetection();
-            }
-          });
+                    // If switching to Tab 1, ensure chord detection is set up
+                    if (tabId === "1") {
+                        setupChordDetection();
+                    }
+                });
+            });
         });
-      });
     </script>
   </body>
 </html>
