chord selector and display, css needs fixing

--- a/index.html
+++ b/index.html
@@ -29,11 +29,19 @@
 
           <div class="tab-content" data-tab="1">
               <div class="chord-panel">
-                  <div id="chord-selector-container"></div>
-                  <div id="chord-display-container">
-                      <div id="chord-display"></div>
+                  <div class="chord-panel-top">
+                      <div class="chord-panel-left">
+                          <div id="chord-selector-container"></div>
+                      </div>
+                      <div class="chord-panel-right">
+                          <div id="zoomed-keyboard-container"></div>
+                      </div>
                   </div>
-                  <div id="zoomed-keyboard-container"></div>
+                  <div class="chord-panel-bottom">
+                      <div id="chord-display-container">
+                          <div id="chord-display"></div>
+                      </div>
+                  </div>
               </div>
           </div>
           <div class="tab-content hidden" data-tab="2">Content for Tab 2</div>
